# SPDX-License-Identifier: GPL-2.0
load(
    "@bazel_skylib//lib:paths.bzl",
    "paths",
)
load(
    "@bazel_skylib//rules:write_file.bzl",
    "write_file",
)
load(
    "@rules_pkg//pkg:install.bzl",
    "pkg_install",
)
load(
    "@rules_pkg//pkg:mappings.bzl",
    "pkg_files",
    "strip_prefix",
)
load(
    "//build/kernel/kleaf:kernel.bzl",
    "dtbo",
    "initramfs",
    "kernel_build",
    "kernel_build_config",
    "kernel_dtstree",
    "kernel_modules_install",
    "kernel_unstripped_modules_archive",
    "merged_kernel_uapi_headers",
    "system_dlkm_image",
    "vendor_boot_image",
    "vendor_dlkm_image",
)
load(
    "//common:modules.bzl",
    "get_gki_modules_list",
    "get_gki_protected_modules_list",
    "get_kunit_modules_list",
)
load(
    ":bazel/constants.scl",
    "KERNEL_DIR",
)
load(
    ":bazel/merged_external_kernel_modules_uapi_headers.bzl",
    "merged_external_kernel_modules_uapi_headers",
)
load(
    ":bazel/pkg_install_with_extraction.bzl",
    "pkg_install_with_extraction",
)

# ---------------------------------------------------------
# MODULE LISTS
# ---------------------------------------------------------

YUKAWA_COMMON_GKI_MODULES = [
    m
    for m in get_gki_modules_list("arm64")
]

YUKAWA_IN_TREE_MODULES = [
    "drivers/bcma/bcma.ko",
    "drivers/char/hw_random/meson-rng.ko",
    "drivers/clk/clk-pwm.ko",
    "drivers/clk/meson/axg-aoclk.ko",
    "drivers/clk/meson/axg-audio.ko",
    "drivers/clk/meson/axg.ko",
    "drivers/clk/meson/clk-cpu-dyndiv.ko",
    "drivers/clk/meson/clk-dualdiv.ko",
    "drivers/clk/meson/clk-mpll.ko",
    "drivers/clk/meson/clk-phase.ko",
    "drivers/clk/meson/clk-pll.ko",
    "drivers/clk/meson/clk-regmap.ko",
    "drivers/clk/meson/g12a-aoclk.ko",
    "drivers/clk/meson/g12a.ko",
    "drivers/clk/meson/gxbb-aoclk.ko",
    "drivers/clk/meson/gxbb.ko",
    "drivers/clk/meson/meson-aoclk.ko",
    "drivers/clk/meson/meson-clkc-utils.ko",
    "drivers/clk/meson/meson-eeclk.ko",
    "drivers/clk/meson/sclk-div.ko",
    "drivers/clk/meson/vclk.ko",
    "drivers/clk/meson/vid-pll-div.ko",
    "drivers/crypto/amlogic/amlogic-gxl-crypto.ko",
    "drivers/cpufreq/cpufreq-dt.ko",
    "drivers/dma-buf/heaps/cma_heap.ko",
    "drivers/dma-buf/heaps/system_heap.ko",
    "drivers/firmware/meson/meson_sm.ko",
    "drivers/gpu/drm/bridge/display-connector.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi-ahb-audio.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi-cec.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi-i2s-audio.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-mipi-dsi.ko",
    "drivers/gpu/drm/display/drm_display_helper.ko",
    "drivers/gpu/drm/drm_dma_helper.ko",
    "drivers/gpu/drm/meson/meson-drm.ko",
    "drivers/gpu/drm/meson/meson_dw_hdmi.ko",
    "drivers/gpu/drm/meson/meson_dw_mipi_dsi.ko",
    "drivers/gpu/drm/panfrost/panfrost.ko",
    "drivers/gpu/drm/scheduler/gpu-sched.ko",
    "drivers/i2c/busses/i2c-meson.ko",
    "drivers/iio/adc/meson_saradc.ko",
    "drivers/input/keyboard/adc-keys.ko",
    "drivers/input/keyboard/gpio_keys_polled.ko",
    "drivers/irqchip/irq-meson-gpio.ko",
    "drivers/leds/leds-gpio.ko",
    "drivers/media/cec/platform/meson/ao-cec-g12a.ko",
    "drivers/media/cec/platform/meson/ao-cec.ko",
    "drivers/media/platform/amlogic/meson-ge2d/ge2d.ko",
    "drivers/media/rc/meson-ir.ko",
    "drivers/mfd/khadas-mcu.ko",
    "drivers/mmc/core/pwrseq_emmc.ko",
    "drivers/mmc/core/pwrseq_simple.ko",
    "drivers/mmc/host/meson-gx-mmc.ko",
    "drivers/net/ethernet/stmicro/stmmac/dwmac-generic.ko",
    "drivers/net/ethernet/stmicro/stmmac/dwmac-meson.ko",
    "drivers/net/ethernet/stmicro/stmmac/dwmac-meson8b.ko",
    "drivers/net/ethernet/stmicro/stmmac/stmmac-platform.ko",
    "drivers/net/ethernet/stmicro/stmmac/stmmac.ko",
    "drivers/net/mdio/mdio-mux-meson-g12a.ko",
    "drivers/net/mdio/mdio-mux.ko",
    "drivers/net/pcs/pcs_xpcs.ko",
    "drivers/net/phy/meson-gxl.ko",
    "drivers/net/phy/realtek.ko",
    "drivers/net/phy/smsc.ko",
    "drivers/net/wireless/broadcom/b43/b43.ko",
    "drivers/net/wireless/broadcom/brcm80211/brcmfmac/brcmfmac.ko",
    "drivers/net/wireless/broadcom/brcm80211/brcmutil/brcmutil.ko",
    "drivers/pci/controller/dwc/pci-meson.ko",
    "drivers/phy/amlogic/phy-meson-axg-mipi-dphy.ko",
    "drivers/phy/amlogic/phy-meson-axg-mipi-pcie-analog.ko",
    "drivers/phy/amlogic/phy-meson-axg-pcie.ko",
    "drivers/phy/amlogic/phy-meson-g12a-mipi-dphy-analog.ko",
    "drivers/phy/amlogic/phy-meson-g12a-usb2.ko",
    "drivers/phy/amlogic/phy-meson-g12a-usb3-pcie.ko",
    "drivers/phy/amlogic/phy-meson-gxl-usb2.ko",
    "drivers/phy/amlogic/phy-meson8b-usb2.ko",
    "drivers/pinctrl/meson/pinctrl-meson-axg-pmx.ko",
    "drivers/pinctrl/meson/pinctrl-meson-axg.ko",
    "drivers/pinctrl/meson/pinctrl-meson-g12a.ko",
    "drivers/pinctrl/meson/pinctrl-meson-gxbb.ko",
    "drivers/pinctrl/meson/pinctrl-meson-gxl.ko",
    "drivers/pinctrl/meson/pinctrl-meson.ko",
    "drivers/pinctrl/meson/pinctrl-meson8-pmx.ko",
    "drivers/pmdomain/amlogic/meson-ee-pwrc.ko",
    "drivers/pmdomain/amlogic/meson-secure-pwrc.ko",
    "drivers/pwm/pwm-meson.ko",
    "drivers/regulator/pwm-regulator.ko",
    "drivers/reset/reset-meson-audio-arb.ko",
    "drivers/reset/reset-meson.ko",
    "drivers/rtc/rtc-meson-vrtc.ko",
    "drivers/soc/amlogic/meson-canvas.ko",
    "drivers/soc/amlogic/meson-clk-measure.ko",
    "drivers/spi/spi-meson-spicc.ko",
    "drivers/spi/spi-meson-spifc.ko",
    "drivers/ssb/ssb.ko",
    "drivers/thermal/amlogic_thermal.ko",
    "drivers/thermal/khadas_mcu_fan.ko",
    "drivers/tty/serial/meson_uart.ko",
    "drivers/usb/dwc2/dwc2.ko",
    "drivers/usb/dwc3/dwc3-meson-g12a.ko",
    "lib/math/cordic.ko",
    "net/mac80211/mac80211.ko",
    "net/wireless/cfg80211.ko",
    "sound/soc/codecs/snd-soc-dmic.ko",
    "sound/soc/codecs/snd-soc-hdmi-codec.ko",
    "sound/soc/codecs/snd-soc-spdif-rx.ko",
    "sound/soc/codecs/snd-soc-spdif-tx.ko",
    "sound/soc/meson/snd-soc-meson-aiu.ko",
    "sound/soc/meson/snd-soc-meson-axg-fifo.ko",
    "sound/soc/meson/snd-soc-meson-axg-frddr.ko",
    "sound/soc/meson/snd-soc-meson-axg-pdm.ko",
    "sound/soc/meson/snd-soc-meson-axg-sound-card.ko",
    "sound/soc/meson/snd-soc-meson-axg-spdifin.ko",
    "sound/soc/meson/snd-soc-meson-axg-spdifout.ko",
    "sound/soc/meson/snd-soc-meson-axg-tdm-formatter.ko",
    "sound/soc/meson/snd-soc-meson-axg-tdm-interface.ko",
    "sound/soc/meson/snd-soc-meson-axg-tdmin.ko",
    "sound/soc/meson/snd-soc-meson-axg-tdmout.ko",
    "sound/soc/meson/snd-soc-meson-axg-toddr.ko",
    "sound/soc/meson/snd-soc-meson-card-utils.ko",
    "sound/soc/meson/snd-soc-meson-codec-glue.ko",
    "sound/soc/meson/snd-soc-meson-g12a-toacodec.ko",
    "sound/soc/meson/snd-soc-meson-g12a-tohdmitx.ko",
    "sound/soc/meson/snd-soc-meson-gx-sound-card.ko",
    "sound/soc/meson/snd-soc-meson-t9015.ko",
]

YUKAWA_VENDOR_BOOT_MODULES = [
    "adc-keys.ko",
    "amlogic_thermal.ko",
    "axg-aoclk.ko",
    "axg-audio.ko",
    "axg.ko",
    "clk-cpu-dyndiv.ko",
    "clk-dualdiv.ko",
    "clk-mpll.ko",
    "clk-phase.ko",
    "clk-pll.ko",
    "clk-regmap.ko",
    "cma_heap.ko",
    "dwc3-meson-g12a.ko",
    "g12a-aoclk.ko",
    "g12a.ko",
    "ge2d.ko",
    "gpio_keys_polled.ko",
    "gxbb-aoclk.ko",
    "gxbb.ko",
    "i2c-meson.ko",
    "irq-meson-gpio.ko",
    "meson-aoclk.ko",
    "meson-clk-measure.ko",
    "meson-clkc-utils.ko",
    "meson-ee-pwrc.ko",
    "meson-eeclk.ko",
    "meson-gx-mmc.ko",
    "meson-ir.ko",
    "meson-rng.ko",
    "meson-secure-pwrc.ko",
    "meson_saradc.ko",
    "meson_sm.ko",
    "meson_uart.ko",
    "pcs_xpcs.ko",
    "phy-meson-g12a-usb2.ko",
    "phy-meson-g12a-usb3-pcie.ko",
    "phy-meson-gxl-usb2.ko",
    "phy-meson8b-usb2.ko",
    "pinctrl-meson-axg-pmx.ko",
    "pinctrl-meson-axg.ko",
    "pinctrl-meson-g12a.ko",
    "pinctrl-meson-gxbb.ko",
    "pinctrl-meson-gxl.ko",
    "pinctrl-meson.ko",
    "pinctrl-meson8-pmx.ko",
    "pwm-meson.ko",
    "pwm-regulator.ko",
    "pwrseq_emmc.ko",
    "pwrseq_simple.ko",
    "regmap-ram.ko",
    "regmap-raw-ram.ko",
    "reset-meson-audio-arb.ko",
    "reset-meson.ko",
    "rtc-meson-vrtc.ko",
    "sclk-div.ko",
    "system_heap.ko",
    "vclk.ko",
    "vid-pll-div.ko",
]

YUKAWA_VENDOR_DLKM_MODULES = [
    "amlogic-gxl-crypto.ko",
    "ao-cec-g12a.ko",
    "ao-cec.ko",
    "b43.ko",
    "bcma.ko",
    "brcmfmac.ko",
    "brcmutil.ko",
    "cfg80211.ko",
    "clk-pwm.ko",
    "cordic.ko",
    "cpufreq-dt.ko",
    "display-connector.ko",
    "drm_display_helper.ko",
    "drm_dma_helper.ko",
    "dw-hdmi-ahb-audio.ko",
    "dw-hdmi-cec.ko",
    "dw-hdmi-i2s-audio.ko",
    "dw-hdmi.ko",
    "dwc2.ko",
    "dwmac-meson.ko",
    "dwmac-meson8b.ko",
    "gpu-sched.ko",
    "khadas-mcu.ko",
    "khadas_mcu_fan.ko",
    "leds-gpio.ko",
    "mac80211.ko",
    "mdio-mux-meson-g12a.ko",
    "mdio-mux.ko",
    "meson-canvas.ko",
    "meson-drm.ko",
    "meson-gxl.ko",
    "meson_dw_hdmi.ko",
    "panfrost.ko",
    "pci-meson.ko",
    "phy-meson-axg-mipi-dphy.ko",
    "phy-meson-axg-mipi-pcie-analog.ko",
    "phy-meson-axg-pcie.ko",
    "phy-meson-g12a-mipi-dphy-analog.ko",
    "realtek.ko",
    "rtc-meson-vrtc.ko",
    "smsc.ko",
    "snd-soc-dmic.ko",
    "snd-soc-hdmi-codec.ko",
    "snd-soc-meson-aiu.ko",
    "snd-soc-meson-axg-fifo.ko",
    "snd-soc-meson-axg-frddr.ko",
    "snd-soc-meson-axg-pdm.ko",
    "snd-soc-meson-axg-sound-card.ko",
    "snd-soc-meson-axg-spdifin.ko",
    "snd-soc-meson-axg-spdifout.ko",
    "snd-soc-meson-axg-tdm-formatter.ko",
    "snd-soc-meson-axg-tdm-interface.ko",
    "snd-soc-meson-axg-tdmin.ko",
    "snd-soc-meson-axg-tdmout.ko",
    "snd-soc-meson-axg-toddr.ko",
    "snd-soc-meson-card-utils.ko",
    "snd-soc-meson-codec-glue.ko",
    "snd-soc-meson-g12a-toacodec.ko",
    "snd-soc-meson-g12a-tohdmitx.ko",
    "snd-soc-meson-gx-sound-card.ko",
    "snd-soc-meson-t9015.ko",
    "snd-soc-spdif-rx.ko",
    "snd-soc-spdif-tx.ko",
    "spi-meson-spicc.ko",
    "spi-meson-spifc.ko",
    "ssb.ko",
    "stmmac-platform.ko",
    "stmmac.ko",
]

YUKAWA_DTBOS = [
    "meson-g12b-a311d-khadas-vim3-android.dtb",
    "meson-sm1-khadas-vim3l-android.dtb",
]

YUKAWA_DTBS = [
    "meson-g12b-a311d-khadas-vim3.dtb",
    "meson-sm1-khadas-vim3l.dtb",
]

YUKAWA_DTBOS_LOCAL = [
    "meson-sm1-khadas-vim3l-android.dtbo",
    "meson-g12b-a311d-khadas-vim3-android.dtbo",
]

# ---------------------------------------------------------
# NATIVE KLEAF KERNEL OVERRIDE (Cloned from common/BUILD.bazel)
# ---------------------------------------------------------

kernel_build(
    name = "yukawa_vim3",
    srcs = ["//common:kernel_aarch64_sources"],
    outs = [
        "Image",
        "System.map",
        "arch/arm64/boot/dts/amlogic/meson-g12a-sei510.dtb",
        "arch/arm64/boot/dts/amlogic/meson-g12b-a311d-khadas-vim3.dtb",
        "arch/arm64/boot/dts/amlogic/meson-sm1-khadas-vim3l.dtb",
        "arch/arm64/boot/dts/amlogic/meson-sm1-sei610.dtb",
        "modules.builtin",
        "modules.builtin.modinfo",
        "vmlinux",
        "vmlinux.symvers",
    ],
    arch = "arm64",
    defconfig = "//common:arch/arm64/configs/gki_defconfig",
    kmi_symbol_list = "//common:gki/aarch64/symbols/yukawa",
    additional_kmi_symbol_lists = [
        "vim3_symbols.txt",
    ],
    make_goals = [
        "Image",
        "modules",
        "amlogic/meson-g12a-sei510.dtb",
        "amlogic/meson-sm1-sei610.dtb",
        "amlogic/meson-g12b-a311d-khadas-vim3.dtb",
        "amlogic/meson-sm1-khadas-vim3l.dtb",
    ],
    makefile = "//common:Makefile",
    module_outs = YUKAWA_COMMON_GKI_MODULES + get_kunit_modules_list("arm64") + YUKAWA_IN_TREE_MODULES + [
        "drivers/watchdog/meson_gxbb_wdt.ko",
        "drivers/watchdog/meson_wdt.ko",
    ],
    pre_defconfig_fragments = ["//common:arch/arm64/configs/amlogic_gki.fragment"],
    post_defconfig_fragments = ["vim3_extra.fragment"],
    visibility = ["//visibility:public"],
)

kernel_modules_install(
    name = "yukawa_vim3_modules_install",
    kernel_build = ":yukawa_vim3",
    visibility = ["//visibility:public"],
)

# ---------------------------------------------------------
# IMAGES & RAMDISK
# ---------------------------------------------------------

initramfs(
    name = "yukawa_initramfs",
    kernel_modules_install = ":yukawa_vim3_modules_install",
    modules_list = ":yukawa_vendor_boot_modules_list",
    ramdisk_compression = "lz4",
    vendor_boot_name = "vendor_boot",
    deps = [":yukawa_file_contexts"],
)

yukawa_dist_targets = [
        "//common:kernel_aarch64_download_or_build",
        "//common:kernel_aarch64_headers",
] + ["//common:kernel_aarch64/" + m for m in YUKAWA_COMMON_GKI_MODULES]

pkg_files(
    name = "yukawa_pkg_files",
    srcs = yukawa_dist_targets,
    strip_prefix = strip_prefix.files_only(),
)

pkg_install(
    name = "yukawa_dist",
    srcs = [
        ":yukawa_pkg_files",
        ":yukawa_modules_pkg_files",
        ":yukawa_system_dlkm_pkg_files",
        ":yukawa_vendor_dlkm_pkg_files",
        ":yukawa_system_dlkm_modules_pkg_files",
        ":yukawa_vendor_dlkm_modules_pkg_files",
        ":yukawa_vendor_boot_modules_pkg_files",
        ":yukawa_dtbo_pkg_files",
        ":yukawa_dtbs_pkg_files",
        ":yukawa_initramfs_pkg_files",
        ":yukawa_kernel_image_lz4_pkg_files",
    ],
    destdir = "out/yukawa/dist",
)

write_file(
    name = "yukawa_vendor_boot_modules_list",
    out = "vendor_boot_modules.list",
    content = YUKAWA_VENDOR_BOOT_MODULES,
)

write_file(
    name = "yukawa_vendor_dlkm_modules_list",
    out = "vendor_dlkm_modules.list",
    content = YUKAWA_VENDOR_DLKM_MODULES,
)

write_file(
    name = "yukawa_system_dlkm_modules_list",
    out = "system_dlkm_modules.list",
    content = YUKAWA_COMMON_GKI_MODULES,
)

write_file(
    name = "yukawa_file_contexts",
    out = "yukawa_file_contexts.txt",
    content = [
        "/vendor_dlkm(/.*)?                  u:object_r:vendor_file:s0",
        "/vendor_dlkm/lib/modules(/.*)?    u:object_r:vendor_kernel_modules:s0",
    ],
)

write_file(
    name = "yukawa_system_file_contexts",
    out = "yukawa_system_file_contexts.txt",
    content = [
        "/system_dlkm(/.*)? u:object_r:system_dlkm_file:s0",
    ],
)

genrule(
    name = "yukawa_kernel_image_lz4",
    srcs = [":yukawa_vim3"],
    outs = ["yukawa-Image.lz4"],
    cmd = """
        IMAGE_FILE=""
        for f in $(locations :yukawa_vim3); do
            if [[ $$(basename $$f) == "Image" ]]; then
                IMAGE_FILE=$$f
                break
            fi
        done
        if [ -z "$$IMAGE_FILE" ]; then
            echo "Error: Could not find Image file"
            exit 1
        fi
        lz4 -f -12 --favor-decSpeed $$IMAGE_FILE $@
    """,
)

dtbo(
    name = "yukawa_dtbo",
    kernel_build = ":yukawa_vim3",
    srcs = [
        "//yukawa-device/arch/arm64/boot/dts:dtbo_amlogic",
    ],
)

vendor_dlkm_image(
    name = "yukawa_vendor_dlkm_image",
    build_flatten = True,
    kernel_modules_install = ":yukawa_vim3_modules_install",
    modules_list = ":yukawa_vendor_dlkm_modules_list",
    deps = [":yukawa_file_contexts"],
)

pkg_files(
    name = "yukawa_vendor_dlkm_image_pkg_files",
    srcs = [":yukawa_vendor_dlkm_image"],
    prefix = "vendor_dlkm",
    strip_prefix = strip_prefix.files_only(),
)

system_dlkm_image(
    name = "yukawa_system_dlkm_image",
    base = "//common:kernel_aarch64_system_dlkm_image",
    build_flatten = True,
    fs_types = ["ext4"],
    kernel_modules_install = ":yukawa_vim3_modules_install",
    modules_blocklist = None,
    modules_list = ":yukawa_system_dlkm_modules_list",
    deps = [":yukawa_system_file_contexts"],
)

pkg_files(
    name = "yukawa_kernel_image_lz4_pkg_files",
    srcs = [":yukawa_kernel_image_lz4"],
    prefix = "",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_system_dlkm_pkg_files",
    srcs = [
        ":yukawa_system_dlkm_image",
    ],
    prefix = "system_dlkm",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_vendor_dlkm_pkg_files",
    srcs = [
        ":yukawa_vendor_dlkm_image",
    ],
    prefix = "vendor_dlkm",
    strip_prefix = strip_prefix.files_only(),
)

genrule(
    name = "yukawa_system_dlkm_modules_flattened",
    srcs = [":yukawa_vim3_modules_install"],
    outs = ["system_dlkm_modules_flattened.tar"],
    cmd = """
        mkdir -p $(@D)/system_dlkm_flat
        modules_dir=$$(dirname $(location :yukawa_vim3_modules_install))/staging/lib/modules
        if [ -d $$modules_dir ]; then
            find $$modules_dir -name "*.ko" -exec cp {} $(@D)/system_dlkm_flat/ \\; 2>/dev/null || true
            echo "Modules copied: $$(ls $(@D)/system_dlkm_flat/*.ko 2>/dev/null | wc -l)"
        fi
        tar -cf $@ -C $(@D)/system_dlkm_flat .
    """,
)

pkg_files(
    name = "yukawa_system_dlkm_modules_pkg_files",
    srcs = [":yukawa_vim3/" + m for m in YUKAWA_COMMON_GKI_MODULES],
    prefix = "system_dlkm/",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_vendor_dlkm_modules_pkg_files",
    srcs = [":yukawa_vim3/" + m for m in YUKAWA_VENDOR_DLKM_MODULES],
    prefix = "vendor_dlkm/",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_modules_pkg_files",
    srcs = [":yukawa_vim3_modules_install"],
    prefix = "modules",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_vendor_boot_modules_pkg_files",
    srcs = [":yukawa_vim3/" + m for m in YUKAWA_VENDOR_BOOT_MODULES],
    prefix = "ramdisk",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_dtbo_pkg_files",
    srcs = [":yukawa_dtbo"],
    prefix = "dtbo",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "yukawa_initramfs_pkg_files",
    srcs = [":yukawa_initramfs"],
    prefix = "initramfs",
    strip_prefix = strip_prefix.files_only(),
)

genrule(
    name = "yukawa_dtbs_genrule",
    srcs = [":yukawa_vim3"],
    outs = YUKAWA_DTBS,
    cmd = """
        for src in $(SRCS); do
            case "$$src" in
                *meson-g12b-a311d-khadas-vim3.dtb)
                    cp $$src $(location meson-g12b-a311d-khadas-vim3.dtb)
                    ;;
                *meson-sm1-khadas-vim3l.dtb)
                    cp $$src $(location meson-sm1-khadas-vim3l.dtb)
                    ;;
            esac
        done
    """,
)

pkg_files(
    name = "yukawa_dtbs_pkg_files",
    srcs = [":yukawa_dtbs_genrule"],
    prefix = "dtbs",
    strip_prefix = strip_prefix.files_only(),
)